--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Install modules
         run: npm ci
       - name: Run tests
-        run: npm run test
+        run: npm run test:cov
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
