gitignore .env files and adding an example

--- a/src/config/environments/.example.env
+++ b/src/config/environments/.example.env
@@ -1,17 +1,18 @@
 ## Server
-
 SERVER_PORT=3000
 
 ## Database
-
+# Connection
+DATABASE_PREFIX=mongodb
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=27017
-DATABASE_USER=
-DATABASE_PASSWORD=
 DATABASE_NAME=rede-social
 
-## Bcrypt
+# MongoDB Authentication
+DATABASE_USER=
+DATABASE_PASSWORD=
 
+## Bcrypt
 SALT_ROUNDS = 10
 
 ## JWT
