Message about the .env file name

--- a/src/config/environments/.example.env
+++ b/src/config/environments/.example.env
@@ -1,3 +1,7 @@
+## The name of the file matters.
+## If you don't provide a NODE_ENV to node, it will automatically set to development
+## and look for development.env
+
 ## Server
 SERVER_PORT=3000
 
