Adapting CI to new folder structure.

--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -1,15 +1,13 @@
 name: Build
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./server
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
