--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,7 @@
   "name": "rede-social-server",
   "version": "0.0.1",
   "description": "",
-  "author": "",
-  "private": true,
+  "author": "Deiveria",
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
@@ -44,15 +43,9 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
     "cross-env": "^7.0.3",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "mongodb-memory-server": "^8.13.0",
-    "prettier": "^2.8.8",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
